# vicdyf

./: README.md  pyproject.toml  setup.cfg
src/vicdyf/: __init__.py  dataset.py  funcs.py  modules.py  utils.py  vicdyf.py  workflow.py
tutorial/: application_on_pancreas.py
