[metadata]
name = vicdyf-tissaishima
version=0.0.1
author = Kojima Yasuhiro
author_email = kojima.yasuhiro@med.nagoya-u.ac.jp
description = Estimate cell state dynamics with fluctuation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kojikoji/vicdyf
project_urls =
	     Bug Tracker = https://github.com/kojikoji/vicdyf/issues
classifiers =
	    Programming Language :: Python :: 3
	    License :: OSI Approved :: MIT License
	    Operating System :: OS Independent
[options]
package_dir =
	    = src
packages = find:
python_requires = 3.7

[options.packages.find]
where = src